--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<form class="page__form" method="post" enctype="multipart/form-data"
 					action="https://jsonplaceholder.typicode.com/posts">
 					<textarea class="page__input-text" autocomplete="off" name="message"
-						class="form__area"></textarea>
+						placeholder="Введите текст" class="form__area"></textarea>
 					<div class="page__act">
 						<button class="page__button"><span>Отправить</span></button>
 					</div>
